--- a/forgot_password.html
+++ b/forgot_password.html
@@ -6,99 +6,149 @@
   <title>Forgot Password | Astronaut Fitness Tracker</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    /* General styles... */
-
-    #particles-js {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
+    /* General Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
+    body, html {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Inter', sans-serif;
+      background: radial-gradient(circle at top, #1b2735, #090a0f);
+      color: #f5f5f5;
+    }
+
+    .wrapper {
+      max-width: 400px;
+      width: 100%;
+      background: #1e293b;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.5);
+    }
+
+    .wrapper h2 {
+      text-align: center;
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: #81c7f5;
+      margin-bottom: 20px;
+    }
+
+    .wrapper .field {
+      margin-top: 20px;
+      position: relative;
+    }
+
+    .wrapper .field input {
+      width: 100%;
+      padding: 12px;
+      background: #262626;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+    }
+
+    .wrapper .field input:focus {
+      outline: 2px solid #ec4899;
+    }
+
+    .wrapper .field input::placeholder {
+      color: #9ca3af;
+    }
+
+    .wrapper .btn {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background-image: linear-gradient(to right, #ec4899, #8b5cf6);
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-size: 1.2rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .wrapper .btn:hover {
+      transform: scale(1.02);
+    }
+
+    .message {
+      margin-top: 20px;
+      text-align: center;
+      font-size: 0.9rem;
+    }
+
+    .message.success {
+      color: #81c7f5;
+    }
+
+    .message.error {
+      color: #ef4444;
+    }
   </style>
 </head>
 <body>
-  <div id="particles-js"></div> <!-- Particle container -->
   <div class="wrapper">
     <h2>Reset Password</h2>
-    <!-- Form content... -->
+    <form id="forgotPasswordForm">
+      <div class="field">
+        <input type="text" id="reset-email" placeholder="Enter your email" required>
+      </div>
+      <div class="field">
+        <input type="password" id="new-password" placeholder="New password" required>
+      </div>
+      <div class="field">
+        <input type="password" id="confirm-password" placeholder="Confirm new password" required>
+      </div>
+      <button type="submit" class="btn">Reset Password</button>
+    </form>
+    <div class="message" id="message"></div>
   </div>
 
-  <!-- Particles.js script -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: {
-          value: 100,
-          density: {
-            enable: true,
-            value_area: 800
-          }
-        },
-        color: {
-          value: "#ffffff"
-        },
-        shape: {
-          type: "circle",
-          stroke: {
-            width: 0,
-            color: "#ffffff"
-          }
-        },
-        opacity: {
-          value: 0.5,
-          random: true,
-          anim: {
-            enable: true,
-            speed: 1,
-            opacity_min: 0.1,
-            sync: false
-          }
-        },
-        size: {
-          value: 3,
-          random: true,
-          anim: {
-            enable: true,
-            speed: 2,
-            size_min: 0.1,
-            sync: false
-          }
-        },
-        line_linked: {
-          enable: true,
-          distance: 150,
-          color: "#ffffff",
-          opacity: 0.4,
-          width: 1
-        },
-        move: {
-          enable: true,
-          speed: 2,
-          direction: "none",
-          random: false,
-          straight: false,
-          out_mode: "out",
-          bounce: false
-        }
-      },
-      interactivity: {
-        detect_on: "canvas",
-        events: {
-          onhover: {
-            enable: true,
-            mode: "repulse"
-          },
-          onclick: {
-            enable: true,
-            mode: "push"
-          }
-        }
-      },
-      retina_detect: true
+    const forgotPasswordForm = document.getElementById("forgotPasswordForm");
+    const message = document.getElementById("message");
+
+    forgotPasswordForm.addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const resetEmail = document.getElementById("reset-email").value;
+      const newPassword = document.getElementById("new-password").value;
+      const confirmPassword = document.getElementById("confirm-password").value;
+
+      // Retrieve users from localStorage
+      let users = JSON.parse(localStorage.getItem("users")) || [];
+
+      // Check if email exists in users
+      const userIndex = users.findIndex(user => user.email === resetEmail);
+
+      if (userIndex === -1) {
+        message.innerHTML = "<span class='message error'>Email not found. Please try again.</span>";
+        return;
+      }
+
+      if (newPassword !== confirmPassword) {
+        message.innerHTML = "<span class='message error'>Passwords do not match. Please try again.</span>";
+        return;
+      }
+
+      // Update user's password in localStorage
+      users[userIndex].password = btoa(newPassword); // Encode new password
+      localStorage.setItem("users", JSON.stringify(users));
+
+      message.innerHTML = "<span class='message success'>Password reset successful! Redirecting...</span>";
+      setTimeout(() => {
+        window.location.href = "login_signup.html"; // Redirect to login page
+      }, 2000); // Redirect after 2 seconds
     });
   </script>
 </body>
