--- a/exercises.html
+++ b/exercises.html
@@ -38,6 +38,10 @@
       <label>Recommended Exercise:</label>
       <p id="exercise-recommendation">N/A</p>
     </div>
+    <div class="profile-section">
+      <label>New Password:</label>
+      <input type="password" id="new-password" placeholder="Enter new password" />
+    </div>
     <button class="btn" onclick="saveProfile()">Save Changes</button>
     <button id="next-btn" class="btn" onclick="goToNextPage()">Next</button>
     <button id="logout-btn" class="btn" onclick="logout()">Logout</button>
