--- a/bmi.html
+++ b/bmi.html
@@ -98,10 +98,6 @@
       <input type="number" id="weight" placeholder="Enter your weight in pounds" required />
     </div>
     <div class="bmi-section">
-      <label>Height (ft):</label>
-      <input type="number" id="height-feet" placeholder="Enter your height in feet" required />
-    </div>
-    <div class="bmi-section">
       <label>Height (inches):</label>
       <input type="number" id="height-inches" placeholder="Enter your height in inches" required />
     </div>
@@ -119,19 +115,15 @@
     // Function to calculate BMI
     function calculateBMI() {
       const weight = document.getElementById("weight").value;
-      const heightFeet = document.getElementById("height-feet").value;
       const heightInches = document.getElementById("height-inches").value;
 
-      if (!weight || !heightFeet || !heightInches) {
+      if (!weight || !heightInches) {
         alert("Please fill out all fields.");
         return;
       }
 
-      // Convert height to inches
-      const totalHeightInInches = (heightFeet * 12) + parseInt(heightInches);
-
       // Calculate BMI using the Imperial System formula
-      const bmi = (703 * weight) / (totalHeightInInches * totalHeightInInches);
+      const bmi = (703 * weight) / (heightInches * heightInches);
 
       // Display BMI result
       document.getElementById("bmi-result").textContent = bmi.toFixed(2);
@@ -142,7 +134,6 @@
       const user = users.find((u) => u.email === currentUser);
       if (user) {
         user.weight = weight;
-        user.heightFeet = heightFeet;
         user.heightInches = heightInches;
         user.bmi = bmi.toFixed(2);
         localStorage.setItem("users", JSON.stringify(users));
@@ -155,7 +146,7 @@
       const users = JSON.parse(localStorage.getItem("users")) || [];
       const user = users.find((u) => u.email === currentUser);
 
-      if (!user || !user.weight || !user.heightFeet || !user.heightInches) {
+      if (!user || !user.weight || !user.heightInches) {
         alert("Please fill in all required information.");
         return;
       }
@@ -170,7 +161,7 @@
       const users = JSON.parse(localStorage.getItem("users")) || [];
       const user = users.find((u) => u.email === currentUser);
 
-      if (user && user.weight && user.heightFeet && user.heightInches) {
+      if (user && user.weight && user.heightInches) {
         // User has already filled in their details, go straight to index.html
         window.location.href = "index.html";
       }
