--- a/achievements.html
+++ b/achievements.html
@@ -10,13 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Particles.js Script -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
-  <!-- Particles Background -->
-  <div id="particles-js"></div>
-
   <nav class="tabbar">
     <a class="tab-link" href="today.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -33,7 +28,7 @@
     </a>
     <a class="tab-link" href="exercises.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2-2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
       </svg>
       <span>Exercises</span>
     </a>
@@ -47,6 +42,14 @@
       <img src="trophy.png" alt="Trophy Icon" class="trophy-icon">
       <span>Achievements</span>
     </a>
+    <a class="tab-link" href="settings.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path fill-rule="evenodd" fill="currentColor" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+      </svg>
+      <span>Settings</span>
+    </a>
+</nav>
+  </div>
 
   <div class="content">
     <header>
@@ -55,20 +58,20 @@
     <main>
       <section class="achievements">
         <div class="achievement" data-achievement="mars">
-          <img class="locked" src="images/mars_blurred.png" alt="Mars Achievement">
-          <img class="unlocked" src="images/mars.png" alt="Mars Achievement">
+          <img class="locked" src="mars_blurred.png" alt="Mars Achievement">
+          <img class="unlocked" src="mars.png" alt="Mars Achievement">
           <p>Drink 4L water daily for 7 days to unlock Mars.</p>
         </div>
 
         <div class="achievement" data-achievement="jupiter">
-          <img class="locked" src="images/jupiter_blurred.png" alt="Jupiter Achievement">
-          <img class="unlocked" src="images/jupiter.png" alt="Jupiter Achievement">
+          <img class="locked" src="jupiter_blurred.png" alt="Jupiter Achievement">
+          <img class="unlocked" src="jupiter.png" alt="Jupiter Achievement">
           <p>Complete 10,000 steps daily for 14 days to visit Jupiter.</p>
         </div>
 
         <div class="achievement" data-achievement="saturn">
-          <img class="locked" src="images/saturn_blurred.png" alt="Saturn Achievement">
-          <img class="unlocked" src="images/saturn.png" alt="Saturn Achievement">
+          <img class="locked" src="saturn_blurred.png" alt="Saturn Achievement">
+          <img class="unlocked" src="saturn.png" alt="Saturn Achievement">
           <p>Sleep 8 hours daily for 14 days to unlock Saturn.</p>
         </div>
 
@@ -78,78 +81,5 @@
   </div>
 
   <script src="js/achievements.js"></script>
-
-  <!-- Particles.js Initialization -->
-  <script>
-    particlesJS('particles-js', {
-      "particles": {
-        "number": {
-          "value": 80,  // Number of particles
-          "density": {
-            "enable": true,
-            "value_area": 800
-          }
-        },
-        "color": {
-          "value": "#ffffff"  // Color of particles
-        },
-        "shape": {
-          "type": "circle",  // Shape of particles
-          "stroke": {
-            "width": 0,
-            "color": "#000000"
-          }
-        },
-        "opacity": {
-          "value": 0.5,
-          "random": true,
-          "anim": {
-            "enable": true,
-            "speed": 1,
-            "opacity_min": 0.1,
-            "sync": false
-          }
-        },
-        "size": {
-          "value": 3,
-          "random": true,
-          "anim": {
-            "enable": true,
-            "speed": 4,
-            "size_min": 0.1,
-            "sync": false
-          }
-        },
-        "move": {
-          "enable": true,
-          "speed": 2,
-          "direction": "none",
-          "random": true,
-          "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": {
-            "enable": false,
-            "rotateX": 600,
-            "rotateY": 1200
-          }
-        }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": {
-            "enable": true,
-            "mode": "repulse"
-          },
-          "onclick": {
-            "enable": true,
-            "mode": "push"
-          }
-        }
-      },
-      "retina_detect": true
-    });
-  </script>
 </body>
 </html>
