--- a/exercises.html
+++ b/exercises.html
@@ -22,14 +22,6 @@
       z-index: -1;
     }
 
-    /* Content styles */
-    .content {
-      position: relative;
-      z-index: 1;
-      padding-left: 270px; /* Adjusted to leave space for the tabbar */
-      padding-top: 60px;
-    }
-
     /* Sidebar Styling */
     .tabbar {
       position: fixed;
@@ -41,8 +33,8 @@
       backdrop-filter: blur(12px);
       display: flex;
       flex-direction: column;
-      align-items: stretch;
       padding: 1rem 0;
+      z-index: 2;
     }
 
     img.trophy-icon {
@@ -83,6 +75,14 @@
     .tabbar span {
       font-size: 0.75rem;
       text-transform: uppercase;
+    }
+
+    /* Main content styles */
+    .content {
+      margin-left: 270px; /* Adjusted to leave space for the tabbar */
+      padding: 2rem;
+      position: relative;
+      z-index: 1;
     }
 
     /* Form inputs */
@@ -149,9 +149,9 @@
       <span>Week</span>
     </a>
     
-    <a class="tab-link" href="exercises.html">
+    <a class="tab-link active" href="exercises.html">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2-2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2-2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2-2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
       </svg>
       <span>Exercises</span>
     </a>
@@ -169,45 +169,47 @@
     </a>
     
     <a id="profile-button" class="tab-link" onclick="window.location.href='profile.html';">
-      <img src="profile.png" alt="
-Profile Icon" class="profile-icon"> <span>Profile</span> </a>
+      <img src="profile.png" alt="Profile Icon" class="profile-icon">
+      <span>Profile</span>
+    </a>
+  </nav>
 
-</nav> <!-- Main content for exercises --> <div class="content"> <h1>Exercise Log</h1>
-php
-Copy
-Edit
-<div class="inputs">
-  <input type="text" placeholder="Exercise Name">
-  <input type="number" placeholder="Reps">
-  <input type="number" placeholder="Sets">
-  <input type="number" placeholder="Weight (kg)">
-</div>
+  <!-- Main content for exercises -->
+  <div class="content">
+    <h1>Exercise Log</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Exercise</th>
-      <th>Reps</th>
-      <th>Sets</th>
-      <th>Weight</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Squat</td>
-      <td>10</td>
-      <td>3</td>
-      <td>80kg</td>
-    </tr>
-    <tr>
-      <td>Bench Press</td>
-      <td>8</td>
-      <td>3</td>
-      <td>70kg</td>
-    </tr>
-    <!-- More rows can go here -->
-  </tbody>
-</table>
-</div> 
+    <div class="inputs">
+      <input type="text" placeholder="Exercise Name">
+      <input type="number" placeholder="Reps">
+      <input type="number" placeholder="Sets">
+      <input type="number" placeholder="Weight (kg)">
+    </div>
+
+    <table>
+      <thead>
+        <tr>
+          <th>Exercise</th>
+          <th>Reps</th>
+          <th>Sets</th>
+          <th>Weight</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Squat</td>
+          <td>10</td>
+          <td>3</td>
+          <td>80kg</td>
+        </tr>
+        <tr>
+          <td>Bench Press</td>
+          <td>8</td>
+          <td>3</td>
+          <td>70kg</td>
+        </tr>
+        <!-- More rows can go here -->
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
