--- a/exercises.html
+++ b/exercises.html
@@ -168,11 +168,11 @@
       <span>Achievements</span>
     </a>
     
-    <a id="profile-button" class="tab-link" onclick="window.location.href='profile.html';">
-      <img src="profile.png" alt="Profile Icon" class="profile-icon">
+        <a id="profile-button" class="tab-link" onclick="window.location.href='profile.html';">
+      <img src="profile.png" alt="Profile" class="icon">
       <span>Profile</span>
     </a>
-  </nav>
+  </nav
 
   <!-- Main content for exercises -->
   <div class="content">
