--- a/nutrition.html
+++ b/nutrition.html
@@ -122,6 +122,11 @@
       </svg>
       <span>Stats</span>
     </a>
+
+    <a class="tab-link" href="nutrition.html">
+        <img src="nutrition.png" alt="Nutrition Icon" class="nutrition-icon">
+      <span>Nutrition</span>
+    </a>
     
     <a class="tab-link" href="achievements.html">
       <img src="trophy.png" alt="Trophy Icon" class="trophy-icon">
